src/components/assets/sass/_windowTitleBar.scss
.cq-drag {
  cursor: -webkit-grab;
  -webkit-app-region: drag;
}

.cq-drag-area:active{
  cursor: -webkit-grabbing;
}

.fsbl-header {
    text-align: center;
    display: flex;
    height: 32px;
    position: fixed;
    align-items: center;
    flex-direction: row;
    justify-content: center;
    background: $window-header-background-color;
    width: 100%;
    z-index: 2147483646;
    top:0;
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    font-weight: 300;
    color: $header-text-color;
    html.desktop-active & {
      background: $active-header-background-color;
      color: #FFF;
    }
}

.fsbl-header-left {
 // margin-right:auto;
  height:100%;
  margin-left:2px;
  left:0px;
  align-content: center;
  align-items:center;
  justify-content: flex-start;
  display:flex;
}

.fsbl-header-center {
  height:100%;
  top: 5px;
  height: calc(100% - 5px);
  align-content: center;
  display:flex;
  align-items: center;
  justify-content:center;
  flex:1;
  width:100%;
  -webkit-user-select: none;
}

.fsbl-header-right {
  margin-right:2px;
  height:100%;
  align-content: center;
  display:flex;
  justify-content: flex-end;
}

/* This div captures the hover event for it's parent. It doesn't stretch to the border, so that mouseout is properly detected. */
.fsbl-hover-detector-right {
  position:absolute;
  width:75%;
  height:75%;
  left:0px;
  bottom:0px;
}
.fsbl-hover-detector-left {
  position:absolute;
  width:75%;
  height:75%;
  right:0px;
  bottom:0px;
}
.fsbl-hover-detector-top {
  position:absolute;
  width:100%;
  height:75%;
  right:0px;
  bottom:0px;
}

.fsbl-icon {
  position: relative;
  color: $header-text-color;
  font-size:15px;
  width:21px;
  padding: 0px 6px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background .2s ease;
  cursor: pointer;
  html.desktop-active & {
    color: #FFF;
  }
  &[data-hover=true]{
    background-color: $inactive-header-button-hover;
    html.desktop-active & {
      background: $primary-accent-color;
      transition: background .2s ease;   
    }
  }
}

/* So it sits over the border*/
.fsbl-icon.fsbl-close {
  margin-right:-1px;
  &[data-hover=true] {
    background: $negative-action-color;
    color: #FFF;
  }
  html.desktop-active &[data-hover=true]{
    background: $negative-action-color;
    color: #FFF;
  }
}

.fsbl-icon-highlighted {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  background-color: $highlighted-inactive-window-button;
  color: #FFF;
  html.desktop-active & {
    background-color: $primary-accent-color;
  }
}

.fsbl-minimize  {
  align-items:flex-end;
}

.fsbl-ejector {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  color: white;
  background-color: $primary-accent-color;
}

.linkerSection{
  display: flex;
  height: 100%;
}
.linker-groups {
    height: 100%;
    display:flex;
    flex-direction: row;
    align-items: center;
}
.linker-group {
   width: 5px;
   height:18px;
   margin-left: 4px;
   border-radius: 2px;
}
.linker-group:nth-last-child(1) {
  margin-right: 5px;
}

.fsbl-linker{
  cursor: pointer;
  display:flex;
  height:100%;
/* So it sits over the border*/
  margin-left:-1px;
  align-items: center;
  justify-content: center;
  align-content: center;
  transition: background .3s ease;
  position:relative;

  &[hover=true] {
    background: $inactive-header-button-hover;
    color: #000;
  }
  html.desktop-active &[hover=true]{
    background: $primary-accent-color;
    color: $header-colorbutton-hover-icon;
  }
}

.ff-minimize{
  padding-bottom: 5px;
}

.ff-maximize, .ff-close, .ff-detached, .ff-attached {
  padding-top: 2px;
}

